force-app/main/default/objects/SMS_Provider_Settings__mdt/SMS_Provider_Settings__mdt.object-meta.xml
<CustomObject>
    <label>SMS Provider Settings</label>
    <pluralLabel>SMS Provider Settings</pluralLabel>
</CustomObject>