force-app/main/default/objects/SMS_Provider_Settings__mdt/fields/API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Base_URL__c</fullName>
    <label>API Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>