force-app/main/default/objects/SMS_Provider_Settings__mdt/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>